--- a/utils/templates/user/dashboard.html
+++ b/utils/templates/user/dashboard.html
@@ -33,7 +33,8 @@
             <div class="card text-white bg-warning h-100">
                 <div class="card-body d-flex flex-column">
                     <h5 class="card-title">Your Referrals</h5>
-                    <p class="card-text display-4">15</p>
+                    <p class="card-title">CODE : {{user.username}} </p>
+                    <p class="card-text">Total Reference: 15</p>
                     <div class="mt-auto">
                         <a href="#" class="btn btn-light">View Details</a>
                     </div>
@@ -72,7 +73,7 @@
             <div class="card bg-light h-100">
                 <div class="card-body">
                     <h5 class="card-title">Summary</h5>
-                    <p class="card-text">Here you can add additional summary information or key metrics about your dashboard.</p>
+                    <p class="card-text">Welcome {{user.first_name}}, Know more about your profile.</p>
                     <a href="#" class="btn btn-primary">More Info</a>
                 </div>
             </div>
