--- a/utils/templates/user/update_profile.html
+++ b/utils/templates/user/update_profile.html
@@ -25,8 +25,8 @@
                     {{ form.email }}
                 </div>
                 <div class="form-group">
-                    {{ form.username.label_tag }}
-                    {{ form.username }}
+                    {{ form.mobile_number.label_tag }}
+                    {{ form.mobile_number }}
                 </div>
                 <button type="submit" class="btn btn-primary mt-3">Update Profile</button>
             </form>
